# linda-store

./: .gitignore  README.md  manage.py  pyproject.toml
docs/: tips.md
lindaStore/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
lindaStore/carrinho/: apps.py  carrinho.py  forms.py  tests.py  urls.py  views.py
lindaStore/carrinho/templates/carrinho/: detail.html
lindaStore/docs/: celery.md  docker.md  flow-message.md  secretkey.m  stripe-cli.md  tips.md
lindaStore/orders/: admin.py  apps.py  models.py  tasks.py  views.py
lindaStore/orders/migrations/: 0001_initial.py  0002_alter_orderitem_order_alter_orderitem_product.py  0003_order_stripe_id.py
lindaStore/orders/templates/orders/order/: create.html  created.html
lindaStore/payment/: apps.py  urls.py  views.py  webhooks.py
lindaStore/payment/templates/payment/: canceled.html  completed.html  process.html
lindaStore/settings/: base.py  prod.py
lindaStore/shop/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
lindaStore/shop/migrations/: 0001_initial.py
lindaStore/shop/templates/shop/: base.html
lindaStore/shop/templates/shop/product/: detail.html  list.html
