[tool.poetry]
name = "linda-store"
version = "0.1.0"
description = "Este projeto foi baseado no livro Django-3-by-example do autho Antonio Melé."
authors = ["Jorge Luiz Plautz <jorge.plautz@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "linda_store"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pillow = "^10.2.0"
watchfiles = "^0.21.0"
celery = "^5.3.6"
flower = "^2.0.1"
stripe = "^8.7.0"
python-decouple = "^3.8"
weasyprint = "^61.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
taskipy = "^1.12.2"
blue = "^0.9.1"
isort = "^5.13.2"
ruff = "^0.3.3"

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = ["ignore::UserWarning", "error", 'ignore::DeprecationWarning',]

[tool.blue]
extend-exclude = '(migrations/)'

[tool.taskipy.tasks]
lint = 'ruff check . && blue --check . --diff'
format = 'blue .  && isort .'
# run = 'uvicorn fast_zero.app:app --reload'
pre_test = 'task lint'
test = 'pytest -s -x --cov=lindaStore -vv'git 
post_test = 'coverage html'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
